--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,22 @@
 {
-    "name": "php-vcr/vcr-bundle",
+    "name": "ubitransport/vcr-bundle",
     "type": "symfony-bundle",
     "description": "Integrates php-vcr into Symfony and its web profiler.",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Kévin Gomez",
-            "email": "contact@kevingomez.fr"
-        },
-        {
-            "name": "Daniel Hürtgen",
-            "email": "daniel@higidi.de"
-        },
-        {
-            "name": "Simon Hübner",
-            "email": "huebner.simon@gmail.com"
-        }
-    ],
-    "config": {
-        "sort-packages": true
-    },
+    "minimum-stability": "stable",
     "require": {
-        "php": "^7.2|^8",
+        "php": "^7.2|^8.0",
         "php-vcr/php-vcr": "^1.5",
-        "symfony/config": "^4|^5",
-        "symfony/browser-kit": "^4|^5",
-        "symfony/dependency-injection": "^4|^5",
-        "symfony/filesystem": "^4|^5",
-        "symfony/event-dispatcher": "^4|^5",
-        "symfony/framework-bundle": "^4.4|^5.4",
-        "symfony/http-foundation": "^4|^5",
-        "symfony/http-kernel": "^4.4|^5",
+        "php-vcr/phpunit-testlistener-vcr": "^3.3",
+        "symfony/config": "^6|^7",
+        "symfony/browser-kit": "^6|^7",
+        "symfony/dependency-injection": "^6|^7",
+        "symfony/filesystem": "^6|^7",
+        "symfony/event-dispatcher": "^6|^7",
+        "symfony/framework-bundle": "^6|^7",
+        "symfony/http-foundation": "^6|^7",
+        "symfony/http-kernel": "^6|^7",
         "symfony/polyfill-php80": "^1.16",
-        "symfony/yaml": "^4|^5"
+        "symfony/yaml": "^6|^7"
     },
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.4",
@@ -49,11 +33,6 @@
         "psr-4": {
             "VCR\\VCRBundle\\Tests\\Functional\\App\\": "tests/Functional/app",
             "VCR\\VCRBundle\\Tests\\": "tests/"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.1.x-dev"
         }
     }
 }
